# ori-v2

./: README.md  docker-compose.dev.yml  json.js  pyproject.toml
ori_v2/: celery.py
ori_v2/db/: add.py  bunschoten_source_urls.txt  compare.py  db.py  query.py  reset.py  schema.py  waddinxveen.json  waddinxveen_ids.txt
ori_v2/logger/: logger.py
ori_v2/notubiz/: README.md  __main__.py  compare.py  tasks.py  utils.py
scripts/: init.sh  purge.sh  scrape_notubiz.sh  start_celery.sh
