[project]
name = "ori-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "Floris Bos",email = "57983252+BluntKatana@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "uuid (>=1.30,<2.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "jq (>=1.8.0,<2.0.0)",
    "celery[redis] (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]

